[gd_scene load_steps=5 format=2]

[ext_resource path="res://Bases/Base Node.tscn" type="PackedScene" id=1]
[ext_resource path="res://Bases/BaseTex2DRenderer.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Bases/Base Node Port.gd" type="Script" id=4]






[node name="BaseTex2DRenderer" instance=ExtResource( 1 )]
title = "BaseTex2DRenderer"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )

[node name="preview" type="ViewportContainer" parent="." index="0"]
margin_left = 20.0
margin_top = 50.0
margin_right = 370.0
margin_bottom = 400.0
rect_min_size = Vector2( 350, 350 )
stretch = true
script = ExtResource( 4 )
OutType = 4
HasOutPort = true

[node name="viewport" type="Viewport" parent="preview" index="0"]
size = Vector2( 350, 350 )
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3
gui_disable_input = true
gui_snap_controls_to_pixels = false

[node name="Control" type="Control" parent="preview/viewport" index="0"]
anchor_left = 50.0
anchor_top = 50.0
anchor_right = 50.0
anchor_bottom = 50.0
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="preview/viewport/Control" index="0"]
margin_right = 248.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "lol i'm being rerndered"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="preview/viewport" index="1"]
texture = ExtResource( 3 )
centered = false

[node name="settings_menu" type="Button" parent="." index="1"]
margin_left = 20.0
margin_top = 402.0
margin_right = 370.0
margin_bottom = 439.0
text = "Render Settings"

[node name="settings" type="WindowDialog" parent="settings_menu" index="0"]
margin_right = 508.0
margin_bottom = 461.0
window_title = "Base Texure 2D Render Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list" type="VBoxContainer" parent="settings_menu/settings" index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="settings_menu/settings/list" index="0"]
margin_right = 508.0
margin_bottom = 56.0
text = "
Render Size"
align = 1

[node name="res" type="HBoxContainer" parent="settings_menu/settings/list" index="1"]
margin_top = 64.0
margin_right = 508.0
margin_bottom = 109.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x" type="SpinBox" parent="settings_menu/settings/list/res" index="0"]
margin_left = 54.0
margin_right = 250.0
margin_bottom = 45.0
min_value = 1.0
max_value = 1920.0
value = 1280.0
prefix = "X"

[node name="y" type="SpinBox" parent="settings_menu/settings/list/res" index="1"]
margin_left = 258.0
margin_right = 454.0
margin_bottom = 45.0
min_value = 1.0
max_value = 1920.0
value = 720.0
prefix = "Y"

[node name="transparency" type="CheckButton" parent="settings_menu/settings/list" index="2"]
margin_top = 117.0
margin_right = 508.0
margin_bottom = 197.0
pressed = true
text = "Enable Transparency"

[node name="hdr" type="CheckButton" parent="settings_menu/settings/list" index="3"]
margin_top = 205.0
margin_right = 508.0
margin_bottom = 285.0
text = "Enable HDR"

[node name="clear" type="CheckButton" parent="settings_menu/settings/list" index="4"]
margin_top = 293.0
margin_right = 508.0
margin_bottom = 373.0
pressed = true
text = "Clear image before rendering"
clip_text = true
[connection signal="pressed" from="settings_menu" to="settings_menu/settings" method="popup_centered"]
[connection signal="value_changed" from="settings_menu/settings/list/res/x" to="." method="_on_settings_x_value_changed"]
[connection signal="value_changed" from="settings_menu/settings/list/res/y" to="." method="_on_settings_y_value_changed"]
[connection signal="toggled" from="settings_menu/settings/list/transparency" to="." method="_on_settings_transparency_toggled"]
[connection signal="toggled" from="settings_menu/settings/list/hdr" to="." method="_on_settings_hdr_toggled"]
[connection signal="toggled" from="settings_menu/settings/list/clear" to="." method="_on_settings_clear_toggled"]
